--- a/aulaBD/.env
+++ b/aulaBD/.env
@@ -1,3 +1,3 @@
 CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/aulaDB
-EMAIL=pedroutumi@gmail
+EMAIL=pedroutumi@gmail.com
 SENHA=fsfz fjfe oumz bqhg
