--- a/aulaBD/package.json
+++ b/aulaBD/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "express-handlebars": "^8.0.2",
     "md5": "^2.3.0",
     "nodemailer": "^7.0.3",
