--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^8.0.2",
     "md5": "^2.3.0",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "pg": "^8.14.1"
   }
 }
